Fix Hero padding on mobile

--- a/src/03-hero/style.scss
+++ b/src/03-hero/style.scss
@@ -31,20 +31,23 @@ $mojblocks-color-white: #ffffff;
   }
 
   &__overlay {
-    padding: 15px 0;
-    padding: govuk-px-to-rem(15) 0;
     float: left;
     width: 100%;
-    margin-left: -15px;
-    margin-left: govuk-px-to-rem(-15);
 
     & .govuk-grid-column-three-quarters {
-      padding-left: 24px;
-      padding-left: govuk-px-to-rem(24)
+
+      @include govuk-media-query($from: tablet) {
+        padding-left: 24px;
+        padding-left: govuk-px-to-rem(24);
+      }
     }
 
 
     @include govuk-media-query($from: tablet) {
+      padding: 15px 0;
+      padding: govuk-px-to-rem(15) 0;
+      margin-left: -15px;
+      margin-left: govuk-px-to-rem(-15);
       margin-top: -80px;
       margin-top: govuk-px-to-rem(-80);
       background: $mojblocks-color-white;
